dev: Refactor Sage plugin and task initialization